[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto_empresas"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
proyecto-empresas = "proyecto_empresas.__main__:main"

[tool.kedro]
package_name = "proyecto_empresas"
project_name = "proyecto_EMPRESAS"
kedro_init_version = "0.19.5"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "proyecto_empresas.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
